# BMSTU

./: .gitignore  README.md
Computer architecture/: readme.md
Computer architecture/lab_01/: 2.ms12  readme.md
Computer architecture/lab_02/: readme.md
Computer architecture/lab_03/: readme.md
Computer architecture/lab_04/: readme.md
Computer graphics/: readme.md
Data types and structures/: big_types.c  big_types.h  main.c  readme.md
Data types and structures/func_tests/: neg_01_out.txt  neg_03_in.txt  neg_03_out.txt  neg_04_in.txt  neg_04_out.txt  neg_05_out.txt  neg_06_in.txt  neg_06_out.txt  pos_01_out.txt  pos_02_out.txt  pos_03_out.txt  pos_04_in.txt  pos_test.sh
Data types and structures/lab_01/: big_double.c  big_double.h  big_double_tools.c  big_double_tools.h  big_int.c  big_int.h  big_types.c  big_types.h  main.c  make_clean.sh  make_debug.sh  make_func.sh  make_release.sh  make_units.sh  make_units_big_double.sh  make_units_big_double_tools.sh  tools.c  (+10 more)
Data types and structures/lab_05/: CMakeLists.txt  main.c
Data types and structures/lab_05/docs/: ИУ7-34Б Гурова ЛР№5.odt
Data types and structures/lab_05/inc/: modes.h  queue.h  queue_like_array.h  queue_like_list.h  report_time_memory.h
Data types and structures/lab_05/src/: modes.c  queue.c  queue_like_array.c  queue_like_list.c  report_time_memory.c
Discrete mathematics/: deep_first_search_neograph.py  deep_first_search_orgraph.py
OOP/: readme.md
Sociology/: readme.md
Technopark/: main.cpp
lab_01/: 1.ms12
Сomputational algorithms/: readme.md
Сomputer graphics/: readme.md
(+270 files in other folders)
